// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`baseline styles 1`] = `
".font-sans-400 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
}

.font-sans-400::before, .font-sans-400::after {
  content: '';
  display: block;
  height: 0;
}

.font-sans-400.text-0\\\\/0 {
  font-size: 10px;
  line-height: 10px;
  padding-top: 3.42px;
  padding-bottom: 0.4px;
}

.font-sans-400.text-0\\\\/0::before {
  margin-top: -2.17px;
}

.font-sans-400.text-0\\\\/0::after {
  margin-bottom: -1.65px;
}

.font-sans-400.text-0\\\\/1 {
  font-size: 10px;
  line-height: 20px;
  padding-top: 3.4199999999999995px;
  padding-bottom: 0.4px;
}

.font-sans-400.text-0\\\\/1::before {
  margin-top: -7.17px;
}

.font-sans-400.text-0\\\\/1::after {
  margin-bottom: -6.65px;
}

.font-sans-400.text-0\\\\/2 {
  font-size: 10px;
  line-height: 30px;
  padding-top: 3.4199999999999995px;
  padding-bottom: 0.4px;
}

.font-sans-400.text-0\\\\/2::before {
  margin-top: -12.17px;
}

.font-sans-400.text-0\\\\/2::after {
  margin-bottom: -11.65px;
}

.font-sans-400.text-1\\\\/0 {
  font-size: 20px;
  line-height: 10px;
  padding-top: -3.56px;
  padding-bottom: 0.4px;
}

.font-sans-400.text-1\\\\/0::before {
  margin-top: 1.06px;
}

.font-sans-400.text-1\\\\/0::after {
  margin-bottom: 2.1px;
}

.font-sans-400.text-1\\\\/1 {
  font-size: 20px;
  line-height: 20px;
  padding-top: 6.44px;
  padding-bottom: 0.4px;
}

.font-sans-400.text-1\\\\/1::before {
  margin-top: -3.94px;
}

.font-sans-400.text-1\\\\/1::after {
  margin-bottom: -2.9px;
}

.font-sans-400.text-1\\\\/2 {
  font-size: 20px;
  line-height: 30px;
  padding-top: 6.4399999999999995px;
  padding-bottom: 0.4px;
}

.font-sans-400.text-1\\\\/2::before {
  margin-top: -8.94px;
}

.font-sans-400.text-1\\\\/2::after {
  margin-bottom: -7.9px;
}

@media (min-width: 640px) {
  .font-sans-400.sm\\\\:text-0\\\\/0 {
    font-size: 10px;
    line-height: 10px;
    padding-top: 3.42px;
    padding-bottom: 0.4px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/0::before {
    margin-top: -2.17px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/0::after {
    margin-bottom: -1.65px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/1 {
    font-size: 10px;
    line-height: 20px;
    padding-top: 3.4199999999999995px;
    padding-bottom: 0.4px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/1::before {
    margin-top: -7.17px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/1::after {
    margin-bottom: -6.65px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/2 {
    font-size: 10px;
    line-height: 30px;
    padding-top: 3.4199999999999995px;
    padding-bottom: 0.4px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/2::before {
    margin-top: -12.17px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/2::after {
    margin-bottom: -11.65px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/0 {
    font-size: 20px;
    line-height: 10px;
    padding-top: -3.56px;
    padding-bottom: 0.4px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/0::before {
    margin-top: 1.06px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/0::after {
    margin-bottom: 2.1px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/1 {
    font-size: 20px;
    line-height: 20px;
    padding-top: 6.44px;
    padding-bottom: 0.4px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/1::before {
    margin-top: -3.94px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/1::after {
    margin-bottom: -2.9px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/2 {
    font-size: 20px;
    line-height: 30px;
    padding-top: 6.4399999999999995px;
    padding-bottom: 0.4px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/2::before {
    margin-top: -8.94px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/2::after {
    margin-bottom: -7.9px;
  }
}"
`;

exports[`capheight styles 1`] = `
".font-sans-400 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
}

.font-sans-400::before, .font-sans-400::after {
  content: '';
  display: block;
  height: 0;
}

.font-sans-400.text-0\\\\/0 {
  font-size: 10px;
  line-height: 6.9799999999999995px;
  padding-top: 0.4px;
  padding-bottom: 0.4px;
}

.font-sans-400.text-0\\\\/0::before {
  margin-top: -0.6599999999999998px;
}

.font-sans-400.text-0\\\\/0::after {
  margin-bottom: -0.1399999999999998px;
}

.font-sans-400.text-0\\\\/1 {
  font-size: 10px;
  line-height: 16.98px;
  padding-top: 0.4px;
  padding-bottom: 0.4px;
}

.font-sans-400.text-0\\\\/1::before {
  margin-top: -5.66px;
}

.font-sans-400.text-0\\\\/1::after {
  margin-bottom: -5.140000000000001px;
}

.font-sans-400.text-0\\\\/2 {
  font-size: 10px;
  line-height: 26.98px;
  padding-top: 0.4px;
  padding-bottom: 0.4px;
}

.font-sans-400.text-0\\\\/2::before {
  margin-top: -10.66px;
}

.font-sans-400.text-0\\\\/2::after {
  margin-bottom: -10.14px;
}

.font-sans-400.text-1\\\\/0 {
  font-size: 20px;
  line-height: 13.959999999999999px;
  padding-top: 0.4px;
  padding-bottom: 0.4px;
}

.font-sans-400.text-1\\\\/0::before {
  margin-top: -0.9199999999999996px;
}

.font-sans-400.text-1\\\\/0::after {
  margin-bottom: 0.12000000000000044px;
}

.font-sans-400.text-1\\\\/1 {
  font-size: 20px;
  line-height: 23.96px;
  padding-top: 0.4px;
  padding-bottom: 0.4px;
}

.font-sans-400.text-1\\\\/1::before {
  margin-top: -5.920000000000001px;
}

.font-sans-400.text-1\\\\/1::after {
  margin-bottom: -4.880000000000001px;
}

.font-sans-400.text-1\\\\/2 {
  font-size: 20px;
  line-height: 33.96px;
  padding-top: 0.4px;
  padding-bottom: 0.4px;
}

.font-sans-400.text-1\\\\/2::before {
  margin-top: -10.92px;
}

.font-sans-400.text-1\\\\/2::after {
  margin-bottom: -9.88px;
}

@media (min-width: 640px) {
  .font-sans-400.sm\\\\:text-0\\\\/0 {
    font-size: 10px;
    line-height: 6.9799999999999995px;
    padding-top: 0.4px;
    padding-bottom: 0.4px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/0::before {
    margin-top: -0.6599999999999998px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/0::after {
    margin-bottom: -0.1399999999999998px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/1 {
    font-size: 10px;
    line-height: 16.98px;
    padding-top: 0.4px;
    padding-bottom: 0.4px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/1::before {
    margin-top: -5.66px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/1::after {
    margin-bottom: -5.140000000000001px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/2 {
    font-size: 10px;
    line-height: 26.98px;
    padding-top: 0.4px;
    padding-bottom: 0.4px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/2::before {
    margin-top: -10.66px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/2::after {
    margin-bottom: -10.14px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/0 {
    font-size: 20px;
    line-height: 13.959999999999999px;
    padding-top: 0.4px;
    padding-bottom: 0.4px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/0::before {
    margin-top: -0.9199999999999996px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/0::after {
    margin-bottom: 0.12000000000000044px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/1 {
    font-size: 20px;
    line-height: 23.96px;
    padding-top: 0.4px;
    padding-bottom: 0.4px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/1::before {
    margin-top: -5.920000000000001px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/1::after {
    margin-bottom: -4.880000000000001px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/2 {
    font-size: 20px;
    line-height: 33.96px;
    padding-top: 0.4px;
    padding-bottom: 0.4px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/2::before {
    margin-top: -10.92px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/2::after {
    margin-bottom: -9.88px;
  }
}"
`;

exports[`matrix styles 1`] = `
".font-sans-400 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
}

.font-sans-400::before, .font-sans-400::after {
  content: '';
  display: block;
  height: 0;
}

.font-sans-400.text-0\\\\/0 {
  font-size: 10px;
  line-height: 6.9799999999999995px;
  padding-top: 0.4px;
  padding-bottom: 0.4px;
}

.font-sans-400.text-0\\\\/0::before {
  margin-top: -0.6599999999999998px;
}

.font-sans-400.text-0\\\\/0::after {
  margin-bottom: -0.1399999999999998px;
}

.font-sans-400.text-0\\\\/1 {
  font-size: 10px;
  line-height: 16.98px;
  padding-top: 0.4px;
  padding-bottom: 0.4px;
}

.font-sans-400.text-0\\\\/1::before {
  margin-top: -5.66px;
}

.font-sans-400.text-0\\\\/1::after {
  margin-bottom: -5.140000000000001px;
}

.font-sans-400.text-0\\\\/2 {
  font-size: 10px;
  line-height: 26.98px;
  padding-top: 0.4px;
  padding-bottom: 0.4px;
}

.font-sans-400.text-0\\\\/2::before {
  margin-top: -10.66px;
}

.font-sans-400.text-0\\\\/2::after {
  margin-bottom: -10.14px;
}

.font-sans-400.text-1\\\\/0 {
  font-size: 20px;
  line-height: 13.959999999999999px;
  padding-top: 0.4px;
  padding-bottom: 0.4px;
}

.font-sans-400.text-1\\\\/0::before {
  margin-top: -0.9199999999999996px;
}

.font-sans-400.text-1\\\\/0::after {
  margin-bottom: 0.12000000000000044px;
}

.font-sans-400.text-1\\\\/1 {
  font-size: 20px;
  line-height: 23.96px;
  padding-top: 0.4px;
  padding-bottom: 0.4px;
}

.font-sans-400.text-1\\\\/1::before {
  margin-top: -5.920000000000001px;
}

.font-sans-400.text-1\\\\/1::after {
  margin-bottom: -4.880000000000001px;
}

.font-sans-400.text-1\\\\/2 {
  font-size: 20px;
  line-height: 33.96px;
  padding-top: 0.4px;
  padding-bottom: 0.4px;
}

.font-sans-400.text-1\\\\/2::before {
  margin-top: -10.92px;
}

.font-sans-400.text-1\\\\/2::after {
  margin-bottom: -9.88px;
}

.matrix-0 {
  display: grid;
  grid-template-columns: repeat(1, minmax(auto,1fr));
}

.matrix-1 {
  display: grid;
  grid-template-columns: repeat(1, minmax(auto,1fr));
}

.matrix-2 {
  display: grid;
  grid-template-columns: repeat(2, minmax(auto,1fr));
}

.matrix-3 {
  display: grid;
  grid-template-columns: repeat(3, minmax(auto,1fr));
}

.matrix-4 {
  display: grid;
  grid-template-columns: repeat(4, minmax(auto,1fr));
}

.matrix-5 {
  display: grid;
  grid-template-columns: repeat(5, minmax(auto,1fr));
}

.matrix-6 {
  display: grid;
  grid-template-columns: repeat(6, minmax(auto,1fr));
}

.matrix-gap-0 {
  grid-row-gap: 0px;
  grid-column-gap: 0px;
}

.matrix-gap-x-0 {
  grid-column-gap: 0px;
}

.matrix-gap-y-0 {
  grid-row-gap: 0px;
}

.matrix-gap-1 {
  grid-row-gap: 10px;
  grid-column-gap: 10px;
}

.matrix-gap-x-1 {
  grid-column-gap: 10px;
}

.matrix-gap-y-1 {
  grid-row-gap: 10px;
}

.matrix-gap-2 {
  grid-row-gap: 20px;
  grid-column-gap: 20px;
}

.matrix-gap-x-2 {
  grid-column-gap: 20px;
}

.matrix-gap-y-2 {
  grid-row-gap: 20px;
}

.cell-start-x-1 {
  grid-column-start: 1 !important;
}

.cell-span-x-1 {
  grid-column: auto / span 1;
}

.cell-start-x-1 {
  grid-column-start: 1 !important;
}

.cell-span-x-1 {
  grid-column: auto / span 1;
}

.cell-start-x-2 {
  grid-column-start: 2 !important;
}

.cell-span-x-2 {
  grid-column: auto / span 2;
}

.cell-start-x-3 {
  grid-column-start: 3 !important;
}

.cell-span-x-3 {
  grid-column: auto / span 3;
}

.cell-start-x-4 {
  grid-column-start: 4 !important;
}

.cell-span-x-4 {
  grid-column: auto / span 4;
}

.cell-start-x-5 {
  grid-column-start: 5 !important;
}

.cell-span-x-5 {
  grid-column: auto / span 5;
}

.cell-start-x-6 {
  grid-column-start: 6 !important;
}

.cell-span-x-6 {
  grid-column: auto / span 6;
}

@media (min-width: 640px) {
  .font-sans-400.sm\\\\:text-0\\\\/0 {
    font-size: 10px;
    line-height: 6.9799999999999995px;
    padding-top: 0.4px;
    padding-bottom: 0.4px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/0::before {
    margin-top: -0.6599999999999998px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/0::after {
    margin-bottom: -0.1399999999999998px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/1 {
    font-size: 10px;
    line-height: 16.98px;
    padding-top: 0.4px;
    padding-bottom: 0.4px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/1::before {
    margin-top: -5.66px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/1::after {
    margin-bottom: -5.140000000000001px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/2 {
    font-size: 10px;
    line-height: 26.98px;
    padding-top: 0.4px;
    padding-bottom: 0.4px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/2::before {
    margin-top: -10.66px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/2::after {
    margin-bottom: -10.14px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/0 {
    font-size: 20px;
    line-height: 13.959999999999999px;
    padding-top: 0.4px;
    padding-bottom: 0.4px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/0::before {
    margin-top: -0.9199999999999996px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/0::after {
    margin-bottom: 0.12000000000000044px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/1 {
    font-size: 20px;
    line-height: 23.96px;
    padding-top: 0.4px;
    padding-bottom: 0.4px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/1::before {
    margin-top: -5.920000000000001px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/1::after {
    margin-bottom: -4.880000000000001px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/2 {
    font-size: 20px;
    line-height: 33.96px;
    padding-top: 0.4px;
    padding-bottom: 0.4px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/2::before {
    margin-top: -10.92px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/2::after {
    margin-bottom: -9.88px;
  }

  .sm\\\\:matrix-0 {
    display: grid;
    grid-template-columns: repeat(1, minmax(auto,1fr));
  }

  .sm\\\\:matrix-1 {
    display: grid;
    grid-template-columns: repeat(1, minmax(auto,1fr));
  }

  .sm\\\\:matrix-2 {
    display: grid;
    grid-template-columns: repeat(2, minmax(auto,1fr));
  }

  .sm\\\\:matrix-3 {
    display: grid;
    grid-template-columns: repeat(3, minmax(auto,1fr));
  }

  .sm\\\\:matrix-4 {
    display: grid;
    grid-template-columns: repeat(4, minmax(auto,1fr));
  }

  .sm\\\\:matrix-5 {
    display: grid;
    grid-template-columns: repeat(5, minmax(auto,1fr));
  }

  .sm\\\\:matrix-6 {
    display: grid;
    grid-template-columns: repeat(6, minmax(auto,1fr));
  }

  .sm\\\\:matrix-gap-0 {
    grid-row-gap: 0px;
    grid-column-gap: 0px;
  }

  .sm\\\\:matrix-gap-x-0 {
    grid-column-gap: 0px;
  }

  .sm\\\\:matrix-gap-y-0 {
    grid-row-gap: 0px;
  }

  .sm\\\\:matrix-gap-1 {
    grid-row-gap: 10px;
    grid-column-gap: 10px;
  }

  .sm\\\\:matrix-gap-x-1 {
    grid-column-gap: 10px;
  }

  .sm\\\\:matrix-gap-y-1 {
    grid-row-gap: 10px;
  }

  .sm\\\\:matrix-gap-2 {
    grid-row-gap: 20px;
    grid-column-gap: 20px;
  }

  .sm\\\\:matrix-gap-x-2 {
    grid-column-gap: 20px;
  }

  .sm\\\\:matrix-gap-y-2 {
    grid-row-gap: 20px;
  }

  .sm\\\\:cell-start-x-1 {
    grid-column-start: 1 !important;
  }

  .sm\\\\:cell-span-x-1 {
    grid-column: auto / span 1;
  }

  .sm\\\\:cell-start-x-1 {
    grid-column-start: 1 !important;
  }

  .sm\\\\:cell-span-x-1 {
    grid-column: auto / span 1;
  }

  .sm\\\\:cell-start-x-2 {
    grid-column-start: 2 !important;
  }

  .sm\\\\:cell-span-x-2 {
    grid-column: auto / span 2;
  }

  .sm\\\\:cell-start-x-3 {
    grid-column-start: 3 !important;
  }

  .sm\\\\:cell-span-x-3 {
    grid-column: auto / span 3;
  }

  .sm\\\\:cell-start-x-4 {
    grid-column-start: 4 !important;
  }

  .sm\\\\:cell-span-x-4 {
    grid-column: auto / span 4;
  }

  .sm\\\\:cell-start-x-5 {
    grid-column-start: 5 !important;
  }

  .sm\\\\:cell-span-x-5 {
    grid-column: auto / span 5;
  }

  .sm\\\\:cell-start-x-6 {
    grid-column-start: 6 !important;
  }

  .sm\\\\:cell-span-x-6 {
    grid-column: auto / span 6;
  }
}"
`;

exports[`measure styles 1`] = `
".font-sans-400 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
}

.font-sans-400::before, .font-sans-400::after {
  content: '';
  display: block;
  height: 0;
}

.font-sans-400.text-0\\\\/0 {
  font-size: 10px;
  line-height: 6.9799999999999995px;
  padding-top: 0.4px;
  padding-bottom: 0.4px;
}

.font-sans-400.text-0\\\\/0::before {
  margin-top: -0.6599999999999998px;
}

.font-sans-400.text-0\\\\/0::after {
  margin-bottom: -0.1399999999999998px;
}

.font-sans-400.text-0\\\\/1 {
  font-size: 10px;
  line-height: 16.98px;
  padding-top: 0.4px;
  padding-bottom: 0.4px;
}

.font-sans-400.text-0\\\\/1::before {
  margin-top: -5.66px;
}

.font-sans-400.text-0\\\\/1::after {
  margin-bottom: -5.140000000000001px;
}

.font-sans-400.text-0\\\\/2 {
  font-size: 10px;
  line-height: 26.98px;
  padding-top: 0.4px;
  padding-bottom: 0.4px;
}

.font-sans-400.text-0\\\\/2::before {
  margin-top: -10.66px;
}

.font-sans-400.text-0\\\\/2::after {
  margin-bottom: -10.14px;
}

.font-sans-400.text-1\\\\/0 {
  font-size: 20px;
  line-height: 13.959999999999999px;
  padding-top: 0.4px;
  padding-bottom: 0.4px;
}

.font-sans-400.text-1\\\\/0::before {
  margin-top: -0.9199999999999996px;
}

.font-sans-400.text-1\\\\/0::after {
  margin-bottom: 0.12000000000000044px;
}

.font-sans-400.text-1\\\\/1 {
  font-size: 20px;
  line-height: 23.96px;
  padding-top: 0.4px;
  padding-bottom: 0.4px;
}

.font-sans-400.text-1\\\\/1::before {
  margin-top: -5.920000000000001px;
}

.font-sans-400.text-1\\\\/1::after {
  margin-bottom: -4.880000000000001px;
}

.font-sans-400.text-1\\\\/2 {
  font-size: 20px;
  line-height: 33.96px;
  padding-top: 0.4px;
  padding-bottom: 0.4px;
}

.font-sans-400.text-1\\\\/2::before {
  margin-top: -10.92px;
}

.font-sans-400.text-1\\\\/2::after {
  margin-bottom: -9.88px;
}

.measure-0 {
  max-width: 10ch;
}

.measure-1 {
  max-width: 20ch;
}

@media (min-width: 640px) {
  .font-sans-400.sm\\\\:text-0\\\\/0 {
    font-size: 10px;
    line-height: 6.9799999999999995px;
    padding-top: 0.4px;
    padding-bottom: 0.4px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/0::before {
    margin-top: -0.6599999999999998px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/0::after {
    margin-bottom: -0.1399999999999998px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/1 {
    font-size: 10px;
    line-height: 16.98px;
    padding-top: 0.4px;
    padding-bottom: 0.4px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/1::before {
    margin-top: -5.66px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/1::after {
    margin-bottom: -5.140000000000001px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/2 {
    font-size: 10px;
    line-height: 26.98px;
    padding-top: 0.4px;
    padding-bottom: 0.4px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/2::before {
    margin-top: -10.66px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/2::after {
    margin-bottom: -10.14px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/0 {
    font-size: 20px;
    line-height: 13.959999999999999px;
    padding-top: 0.4px;
    padding-bottom: 0.4px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/0::before {
    margin-top: -0.9199999999999996px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/0::after {
    margin-bottom: 0.12000000000000044px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/1 {
    font-size: 20px;
    line-height: 23.96px;
    padding-top: 0.4px;
    padding-bottom: 0.4px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/1::before {
    margin-top: -5.920000000000001px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/1::after {
    margin-bottom: -4.880000000000001px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/2 {
    font-size: 20px;
    line-height: 33.96px;
    padding-top: 0.4px;
    padding-bottom: 0.4px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/2::before {
    margin-top: -10.92px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/2::after {
    margin-bottom: -9.88px;
  }

  .sm\\\\:measure-0 {
    max-width: 10ch;
  }

  .sm\\\\:measure-1 {
    max-width: 20ch;
  }
}"
`;

exports[`rhythm styles 1`] = `
".font-sans-400 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
}

.font-sans-400::before, .font-sans-400::after {
  content: '';
  display: block;
  height: 0;
}

.font-sans-400.text-0\\\\/0 {
  font-size: 10px;
  line-height: 6.9799999999999995px;
  padding-top: 0.4px;
  padding-bottom: 0.4px;
}

.font-sans-400.text-0\\\\/0::before {
  margin-top: -0.6599999999999998px;
}

.font-sans-400.text-0\\\\/0::after {
  margin-bottom: -0.1399999999999998px;
}

.font-sans-400.text-0\\\\/1 {
  font-size: 10px;
  line-height: 16.98px;
  padding-top: 0.4px;
  padding-bottom: 0.4px;
}

.font-sans-400.text-0\\\\/1::before {
  margin-top: -5.66px;
}

.font-sans-400.text-0\\\\/1::after {
  margin-bottom: -5.140000000000001px;
}

.font-sans-400.text-0\\\\/2 {
  font-size: 10px;
  line-height: 26.98px;
  padding-top: 0.4px;
  padding-bottom: 0.4px;
}

.font-sans-400.text-0\\\\/2::before {
  margin-top: -10.66px;
}

.font-sans-400.text-0\\\\/2::after {
  margin-bottom: -10.14px;
}

.font-sans-400.text-1\\\\/0 {
  font-size: 20px;
  line-height: 13.959999999999999px;
  padding-top: 0.4px;
  padding-bottom: 0.4px;
}

.font-sans-400.text-1\\\\/0::before {
  margin-top: -0.9199999999999996px;
}

.font-sans-400.text-1\\\\/0::after {
  margin-bottom: 0.12000000000000044px;
}

.font-sans-400.text-1\\\\/1 {
  font-size: 20px;
  line-height: 23.96px;
  padding-top: 0.4px;
  padding-bottom: 0.4px;
}

.font-sans-400.text-1\\\\/1::before {
  margin-top: -5.920000000000001px;
}

.font-sans-400.text-1\\\\/1::after {
  margin-bottom: -4.880000000000001px;
}

.font-sans-400.text-1\\\\/2 {
  font-size: 20px;
  line-height: 33.96px;
  padding-top: 0.4px;
  padding-bottom: 0.4px;
}

.font-sans-400.text-1\\\\/2::before {
  margin-top: -10.92px;
}

.font-sans-400.text-1\\\\/2::after {
  margin-bottom: -9.88px;
}

.rhythm-0 > * + * {
  margin-top: 0px;
}

.rhythm-y-0 > * + * {
  margin-top: 0px;
}

.rhythm-x-0 > * + * {
  margin-left: 0px;
}

.rhythm-1 > * + * {
  margin-top: 10px;
}

.rhythm-y-1 > * + * {
  margin-top: 10px;
}

.rhythm-x-1 > * + * {
  margin-left: 10px;
}

.rhythm-2 > * + * {
  margin-top: 20px;
}

.rhythm-y-2 > * + * {
  margin-top: 20px;
}

.rhythm-x-2 > * + * {
  margin-left: 20px;
}

@media (min-width: 640px) {
  .font-sans-400.sm\\\\:text-0\\\\/0 {
    font-size: 10px;
    line-height: 6.9799999999999995px;
    padding-top: 0.4px;
    padding-bottom: 0.4px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/0::before {
    margin-top: -0.6599999999999998px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/0::after {
    margin-bottom: -0.1399999999999998px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/1 {
    font-size: 10px;
    line-height: 16.98px;
    padding-top: 0.4px;
    padding-bottom: 0.4px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/1::before {
    margin-top: -5.66px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/1::after {
    margin-bottom: -5.140000000000001px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/2 {
    font-size: 10px;
    line-height: 26.98px;
    padding-top: 0.4px;
    padding-bottom: 0.4px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/2::before {
    margin-top: -10.66px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/2::after {
    margin-bottom: -10.14px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/0 {
    font-size: 20px;
    line-height: 13.959999999999999px;
    padding-top: 0.4px;
    padding-bottom: 0.4px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/0::before {
    margin-top: -0.9199999999999996px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/0::after {
    margin-bottom: 0.12000000000000044px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/1 {
    font-size: 20px;
    line-height: 23.96px;
    padding-top: 0.4px;
    padding-bottom: 0.4px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/1::before {
    margin-top: -5.920000000000001px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/1::after {
    margin-bottom: -4.880000000000001px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/2 {
    font-size: 20px;
    line-height: 33.96px;
    padding-top: 0.4px;
    padding-bottom: 0.4px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/2::before {
    margin-top: -10.92px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/2::after {
    margin-bottom: -9.88px;
  }

  .sm\\\\:rhythm-0 > * + * {
    margin-top: 0px;
  }

  .sm\\\\:rhythm-y-0 > * + * {
    margin-top: 0px;
  }

  .sm\\\\:rhythm-x-0 > * + * {
    margin-left: 0px;
  }

  .sm\\\\:rhythm-1 > * + * {
    margin-top: 10px;
  }

  .sm\\\\:rhythm-y-1 > * + * {
    margin-top: 10px;
  }

  .sm\\\\:rhythm-x-1 > * + * {
    margin-left: 10px;
  }

  .sm\\\\:rhythm-2 > * + * {
    margin-top: 20px;
  }

  .sm\\\\:rhythm-y-2 > * + * {
    margin-top: 20px;
  }

  .sm\\\\:rhythm-x-2 > * + * {
    margin-left: 20px;
  }
}"
`;

exports[`use px 1`] = `
".font-sans-400 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
}

.font-sans-400::before, .font-sans-400::after {
  content: '';
  display: block;
  height: 0;
}

.font-sans-400.text-0\\\\/0 {
  font-size: 10px;
  line-height: 10px;
  padding-top: 3.42px;
  padding-bottom: 0.4px;
}

.font-sans-400.text-0\\\\/0::before {
  margin-top: -2.17px;
}

.font-sans-400.text-0\\\\/0::after {
  margin-bottom: -1.65px;
}

.font-sans-400.text-0\\\\/1 {
  font-size: 10px;
  line-height: 20px;
  padding-top: 3.4199999999999995px;
  padding-bottom: 0.4px;
}

.font-sans-400.text-0\\\\/1::before {
  margin-top: -7.17px;
}

.font-sans-400.text-0\\\\/1::after {
  margin-bottom: -6.65px;
}

.font-sans-400.text-0\\\\/2 {
  font-size: 10px;
  line-height: 30px;
  padding-top: 3.4199999999999995px;
  padding-bottom: 0.4px;
}

.font-sans-400.text-0\\\\/2::before {
  margin-top: -12.17px;
}

.font-sans-400.text-0\\\\/2::after {
  margin-bottom: -11.65px;
}

.font-sans-400.text-1\\\\/0 {
  font-size: 20px;
  line-height: 10px;
  padding-top: -3.56px;
  padding-bottom: 0.4px;
}

.font-sans-400.text-1\\\\/0::before {
  margin-top: 1.06px;
}

.font-sans-400.text-1\\\\/0::after {
  margin-bottom: 2.1px;
}

.font-sans-400.text-1\\\\/1 {
  font-size: 20px;
  line-height: 20px;
  padding-top: 6.44px;
  padding-bottom: 0.4px;
}

.font-sans-400.text-1\\\\/1::before {
  margin-top: -3.94px;
}

.font-sans-400.text-1\\\\/1::after {
  margin-bottom: -2.9px;
}

.font-sans-400.text-1\\\\/2 {
  font-size: 20px;
  line-height: 30px;
  padding-top: 6.4399999999999995px;
  padding-bottom: 0.4px;
}

.font-sans-400.text-1\\\\/2::before {
  margin-top: -8.94px;
}

.font-sans-400.text-1\\\\/2::after {
  margin-bottom: -7.9px;
}

.bg-baseline {
  position: relative;
  background-repeat: repeat;
  background-image: linear-gradient(
		rgba(255, 0, 255, 0.3) 1px,
		transparent 0
	);
  background-size: 100% 10px;
}

.measure-0 {
  max-width: 10ch;
}

.measure-1 {
  max-width: 20ch;
}

.rhythm-0 > * + * {
  margin-top: 0px;
}

.rhythm-y-0 > * + * {
  margin-top: 0px;
}

.rhythm-x-0 > * + * {
  margin-left: 0px;
}

.rhythm-1 > * + * {
  margin-top: 10px;
}

.rhythm-y-1 > * + * {
  margin-top: 10px;
}

.rhythm-x-1 > * + * {
  margin-left: 10px;
}

.rhythm-2 > * + * {
  margin-top: 20px;
}

.rhythm-y-2 > * + * {
  margin-top: 20px;
}

.rhythm-x-2 > * + * {
  margin-left: 20px;
}

.matrix-0 {
  display: grid;
  grid-template-columns: repeat(1, minmax(auto,1fr));
}

.matrix-1 {
  display: grid;
  grid-template-columns: repeat(1, minmax(auto,1fr));
}

.matrix-2 {
  display: grid;
  grid-template-columns: repeat(2, minmax(auto,1fr));
}

.matrix-3 {
  display: grid;
  grid-template-columns: repeat(3, minmax(auto,1fr));
}

.matrix-4 {
  display: grid;
  grid-template-columns: repeat(4, minmax(auto,1fr));
}

.matrix-5 {
  display: grid;
  grid-template-columns: repeat(5, minmax(auto,1fr));
}

.matrix-6 {
  display: grid;
  grid-template-columns: repeat(6, minmax(auto,1fr));
}

.matrix-gap-0 {
  grid-row-gap: 0px;
  grid-column-gap: 0px;
}

.matrix-gap-x-0 {
  grid-column-gap: 0px;
}

.matrix-gap-y-0 {
  grid-row-gap: 0px;
}

.matrix-gap-1 {
  grid-row-gap: 10px;
  grid-column-gap: 10px;
}

.matrix-gap-x-1 {
  grid-column-gap: 10px;
}

.matrix-gap-y-1 {
  grid-row-gap: 10px;
}

.matrix-gap-2 {
  grid-row-gap: 20px;
  grid-column-gap: 20px;
}

.matrix-gap-x-2 {
  grid-column-gap: 20px;
}

.matrix-gap-y-2 {
  grid-row-gap: 20px;
}

.cell-start-x-1 {
  grid-column-start: 1 !important;
}

.cell-span-x-1 {
  grid-column: auto / span 1;
}

.cell-start-x-1 {
  grid-column-start: 1 !important;
}

.cell-span-x-1 {
  grid-column: auto / span 1;
}

.cell-start-x-2 {
  grid-column-start: 2 !important;
}

.cell-span-x-2 {
  grid-column: auto / span 2;
}

.cell-start-x-3 {
  grid-column-start: 3 !important;
}

.cell-span-x-3 {
  grid-column: auto / span 3;
}

.cell-start-x-4 {
  grid-column-start: 4 !important;
}

.cell-span-x-4 {
  grid-column: auto / span 4;
}

.cell-start-x-5 {
  grid-column-start: 5 !important;
}

.cell-span-x-5 {
  grid-column: auto / span 5;
}

.cell-start-x-6 {
  grid-column-start: 6 !important;
}

.cell-span-x-6 {
  grid-column: auto / span 6;
}

@media (min-width: 640px) {
  .font-sans-400.sm\\\\:text-0\\\\/0 {
    font-size: 10px;
    line-height: 10px;
    padding-top: 3.42px;
    padding-bottom: 0.4px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/0::before {
    margin-top: -2.17px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/0::after {
    margin-bottom: -1.65px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/1 {
    font-size: 10px;
    line-height: 20px;
    padding-top: 3.4199999999999995px;
    padding-bottom: 0.4px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/1::before {
    margin-top: -7.17px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/1::after {
    margin-bottom: -6.65px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/2 {
    font-size: 10px;
    line-height: 30px;
    padding-top: 3.4199999999999995px;
    padding-bottom: 0.4px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/2::before {
    margin-top: -12.17px;
  }

  .font-sans-400.sm\\\\:text-0\\\\/2::after {
    margin-bottom: -11.65px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/0 {
    font-size: 20px;
    line-height: 10px;
    padding-top: -3.56px;
    padding-bottom: 0.4px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/0::before {
    margin-top: 1.06px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/0::after {
    margin-bottom: 2.1px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/1 {
    font-size: 20px;
    line-height: 20px;
    padding-top: 6.44px;
    padding-bottom: 0.4px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/1::before {
    margin-top: -3.94px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/1::after {
    margin-bottom: -2.9px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/2 {
    font-size: 20px;
    line-height: 30px;
    padding-top: 6.4399999999999995px;
    padding-bottom: 0.4px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/2::before {
    margin-top: -8.94px;
  }

  .font-sans-400.sm\\\\:text-1\\\\/2::after {
    margin-bottom: -7.9px;
  }

  .sm\\\\:measure-0 {
    max-width: 10ch;
  }

  .sm\\\\:measure-1 {
    max-width: 20ch;
  }

  .sm\\\\:rhythm-0 > * + * {
    margin-top: 0px;
  }

  .sm\\\\:rhythm-y-0 > * + * {
    margin-top: 0px;
  }

  .sm\\\\:rhythm-x-0 > * + * {
    margin-left: 0px;
  }

  .sm\\\\:rhythm-1 > * + * {
    margin-top: 10px;
  }

  .sm\\\\:rhythm-y-1 > * + * {
    margin-top: 10px;
  }

  .sm\\\\:rhythm-x-1 > * + * {
    margin-left: 10px;
  }

  .sm\\\\:rhythm-2 > * + * {
    margin-top: 20px;
  }

  .sm\\\\:rhythm-y-2 > * + * {
    margin-top: 20px;
  }

  .sm\\\\:rhythm-x-2 > * + * {
    margin-left: 20px;
  }

  .sm\\\\:matrix-0 {
    display: grid;
    grid-template-columns: repeat(1, minmax(auto,1fr));
  }

  .sm\\\\:matrix-1 {
    display: grid;
    grid-template-columns: repeat(1, minmax(auto,1fr));
  }

  .sm\\\\:matrix-2 {
    display: grid;
    grid-template-columns: repeat(2, minmax(auto,1fr));
  }

  .sm\\\\:matrix-3 {
    display: grid;
    grid-template-columns: repeat(3, minmax(auto,1fr));
  }

  .sm\\\\:matrix-4 {
    display: grid;
    grid-template-columns: repeat(4, minmax(auto,1fr));
  }

  .sm\\\\:matrix-5 {
    display: grid;
    grid-template-columns: repeat(5, minmax(auto,1fr));
  }

  .sm\\\\:matrix-6 {
    display: grid;
    grid-template-columns: repeat(6, minmax(auto,1fr));
  }

  .sm\\\\:matrix-gap-0 {
    grid-row-gap: 0px;
    grid-column-gap: 0px;
  }

  .sm\\\\:matrix-gap-x-0 {
    grid-column-gap: 0px;
  }

  .sm\\\\:matrix-gap-y-0 {
    grid-row-gap: 0px;
  }

  .sm\\\\:matrix-gap-1 {
    grid-row-gap: 10px;
    grid-column-gap: 10px;
  }

  .sm\\\\:matrix-gap-x-1 {
    grid-column-gap: 10px;
  }

  .sm\\\\:matrix-gap-y-1 {
    grid-row-gap: 10px;
  }

  .sm\\\\:matrix-gap-2 {
    grid-row-gap: 20px;
    grid-column-gap: 20px;
  }

  .sm\\\\:matrix-gap-x-2 {
    grid-column-gap: 20px;
  }

  .sm\\\\:matrix-gap-y-2 {
    grid-row-gap: 20px;
  }

  .sm\\\\:cell-start-x-1 {
    grid-column-start: 1 !important;
  }

  .sm\\\\:cell-span-x-1 {
    grid-column: auto / span 1;
  }

  .sm\\\\:cell-start-x-1 {
    grid-column-start: 1 !important;
  }

  .sm\\\\:cell-span-x-1 {
    grid-column: auto / span 1;
  }

  .sm\\\\:cell-start-x-2 {
    grid-column-start: 2 !important;
  }

  .sm\\\\:cell-span-x-2 {
    grid-column: auto / span 2;
  }

  .sm\\\\:cell-start-x-3 {
    grid-column-start: 3 !important;
  }

  .sm\\\\:cell-span-x-3 {
    grid-column: auto / span 3;
  }

  .sm\\\\:cell-start-x-4 {
    grid-column-start: 4 !important;
  }

  .sm\\\\:cell-span-x-4 {
    grid-column: auto / span 4;
  }

  .sm\\\\:cell-start-x-5 {
    grid-column-start: 5 !important;
  }

  .sm\\\\:cell-span-x-5 {
    grid-column: auto / span 5;
  }

  .sm\\\\:cell-start-x-6 {
    grid-column-start: 6 !important;
  }

  .sm\\\\:cell-span-x-6 {
    grid-column: auto / span 6;
  }
}"
`;

exports[`use rem 1`] = `
".font-sans-400 {
  font-family: \\"IBM Plex Sans\\", sans-serif;
  font-weight: 400;
  font-style: normal;
  display: block;
}

.font-sans-400::before, .font-sans-400::after {
  content: '';
  display: block;
  height: 0;
}

.font-sans-400.text-0\\\\/0 {
  font-size: 1rem;
  line-height: 1;
  padding-top: 0.34199999999999997em;
  padding-bottom: 0.04em;
}

.font-sans-400.text-0\\\\/0::before {
  margin-top: -0.217em;
}

.font-sans-400.text-0\\\\/0::after {
  margin-bottom: -0.16499999999999998em;
}

.font-sans-400.text-0\\\\/1 {
  font-size: 1rem;
  line-height: 2;
  padding-top: 0.34199999999999997em;
  padding-bottom: 0.04em;
}

.font-sans-400.text-0\\\\/1::before {
  margin-top: -0.717em;
}

.font-sans-400.text-0\\\\/1::after {
  margin-bottom: -0.665em;
}

.font-sans-400.text-0\\\\/2 {
  font-size: 1rem;
  line-height: 3;
  padding-top: 0.34199999999999997em;
  padding-bottom: 0.04em;
}

.font-sans-400.text-0\\\\/2::before {
  margin-top: -1.217em;
}

.font-sans-400.text-0\\\\/2::after {
  margin-bottom: -1.165em;
}

.font-sans-400.text-1\\\\/0 {
  font-size: 2rem;
  line-height: 0.5;
  padding-top: -0.178em;
  padding-bottom: 0.02em;
}

.font-sans-400.text-1\\\\/0::before {
  margin-top: 0.053000000000000005em;
}

.font-sans-400.text-1\\\\/0::after {
  margin-bottom: 0.10500000000000001em;
}

.font-sans-400.text-1\\\\/1 {
  font-size: 2rem;
  line-height: 1;
  padding-top: 0.322em;
  padding-bottom: 0.02em;
}

.font-sans-400.text-1\\\\/1::before {
  margin-top: -0.197em;
}

.font-sans-400.text-1\\\\/1::after {
  margin-bottom: -0.145em;
}

.font-sans-400.text-1\\\\/2 {
  font-size: 2rem;
  line-height: 1.5;
  padding-top: 0.32199999999999995em;
  padding-bottom: 0.02em;
}

.font-sans-400.text-1\\\\/2::before {
  margin-top: -0.44699999999999995em;
}

.font-sans-400.text-1\\\\/2::after {
  margin-bottom: -0.395em;
}

.bg-baseline {
  position: relative;
  background-repeat: repeat;
  background-size: 100% 1rem;
  background-image: linear-gradient(
		rgba(255, 0, 255, 0.3) 1px,
		transparent 0
	);
}

.measure-0 {
  max-width: 10ch;
}

.measure-1 {
  max-width: 20ch;
}

.rhythm-0 > * + * {
  margin-top: 0rem;
}

.rhythm-y-0 > * + * {
  margin-top: 0rem;
}

.rhythm-x-0 > * + * {
  margin-left: 0rem;
}

.rhythm-1 > * + * {
  margin-top: 1rem;
}

.rhythm-y-1 > * + * {
  margin-top: 1rem;
}

.rhythm-x-1 > * + * {
  margin-left: 1rem;
}

.rhythm-2 > * + * {
  margin-top: 2rem;
}

.rhythm-y-2 > * + * {
  margin-top: 2rem;
}

.rhythm-x-2 > * + * {
  margin-left: 2rem;
}

.matrix-0 {
  display: grid;
  grid-template-columns: repeat(1, minmax(auto,1fr));
}

.matrix-1 {
  display: grid;
  grid-template-columns: repeat(1, minmax(auto,1fr));
}

.matrix-2 {
  display: grid;
  grid-template-columns: repeat(2, minmax(auto,1fr));
}

.matrix-3 {
  display: grid;
  grid-template-columns: repeat(3, minmax(auto,1fr));
}

.matrix-4 {
  display: grid;
  grid-template-columns: repeat(4, minmax(auto,1fr));
}

.matrix-5 {
  display: grid;
  grid-template-columns: repeat(5, minmax(auto,1fr));
}

.matrix-6 {
  display: grid;
  grid-template-columns: repeat(6, minmax(auto,1fr));
}

.matrix-gap-0 {
  grid-row-gap: 0rem;
  grid-column-gap: 0rem;
}

.matrix-gap-x-0 {
  grid-column-gap: 0rem;
}

.matrix-gap-y-0 {
  grid-row-gap: 0rem;
}

.matrix-gap-1 {
  grid-row-gap: 1rem;
  grid-column-gap: 1rem;
}

.matrix-gap-x-1 {
  grid-column-gap: 1rem;
}

.matrix-gap-y-1 {
  grid-row-gap: 1rem;
}

.matrix-gap-2 {
  grid-row-gap: 2rem;
  grid-column-gap: 2rem;
}

.matrix-gap-x-2 {
  grid-column-gap: 2rem;
}

.matrix-gap-y-2 {
  grid-row-gap: 2rem;
}

.cell-start-x-1 {
  grid-column-start: 1 !important;
}

.cell-span-x-1 {
  grid-column: auto / span 1;
}

.cell-start-x-1 {
  grid-column-start: 1 !important;
}

.cell-span-x-1 {
  grid-column: auto / span 1;
}

.cell-start-x-2 {
  grid-column-start: 2 !important;
}

.cell-span-x-2 {
  grid-column: auto / span 2;
}

.cell-start-x-3 {
  grid-column-start: 3 !important;
}

.cell-span-x-3 {
  grid-column: auto / span 3;
}

.cell-start-x-4 {
  grid-column-start: 4 !important;
}

.cell-span-x-4 {
  grid-column: auto / span 4;
}

.cell-start-x-5 {
  grid-column-start: 5 !important;
}

.cell-span-x-5 {
  grid-column: auto / span 5;
}

.cell-start-x-6 {
  grid-column-start: 6 !important;
}

.cell-span-x-6 {
  grid-column: auto / span 6;
}

@media (min-width: 640px) {
  .font-sans-400.sm\\\\:text-0\\\\/0 {
    font-size: 1rem;
    line-height: 1;
    padding-top: 0.34199999999999997em;
    padding-bottom: 0.04em;
  }

  .font-sans-400.sm\\\\:text-0\\\\/0::before {
    margin-top: -0.217em;
  }

  .font-sans-400.sm\\\\:text-0\\\\/0::after {
    margin-bottom: -0.16499999999999998em;
  }

  .font-sans-400.sm\\\\:text-0\\\\/1 {
    font-size: 1rem;
    line-height: 2;
    padding-top: 0.34199999999999997em;
    padding-bottom: 0.04em;
  }

  .font-sans-400.sm\\\\:text-0\\\\/1::before {
    margin-top: -0.717em;
  }

  .font-sans-400.sm\\\\:text-0\\\\/1::after {
    margin-bottom: -0.665em;
  }

  .font-sans-400.sm\\\\:text-0\\\\/2 {
    font-size: 1rem;
    line-height: 3;
    padding-top: 0.34199999999999997em;
    padding-bottom: 0.04em;
  }

  .font-sans-400.sm\\\\:text-0\\\\/2::before {
    margin-top: -1.217em;
  }

  .font-sans-400.sm\\\\:text-0\\\\/2::after {
    margin-bottom: -1.165em;
  }

  .font-sans-400.sm\\\\:text-1\\\\/0 {
    font-size: 2rem;
    line-height: 0.5;
    padding-top: -0.178em;
    padding-bottom: 0.02em;
  }

  .font-sans-400.sm\\\\:text-1\\\\/0::before {
    margin-top: 0.053000000000000005em;
  }

  .font-sans-400.sm\\\\:text-1\\\\/0::after {
    margin-bottom: 0.10500000000000001em;
  }

  .font-sans-400.sm\\\\:text-1\\\\/1 {
    font-size: 2rem;
    line-height: 1;
    padding-top: 0.322em;
    padding-bottom: 0.02em;
  }

  .font-sans-400.sm\\\\:text-1\\\\/1::before {
    margin-top: -0.197em;
  }

  .font-sans-400.sm\\\\:text-1\\\\/1::after {
    margin-bottom: -0.145em;
  }

  .font-sans-400.sm\\\\:text-1\\\\/2 {
    font-size: 2rem;
    line-height: 1.5;
    padding-top: 0.32199999999999995em;
    padding-bottom: 0.02em;
  }

  .font-sans-400.sm\\\\:text-1\\\\/2::before {
    margin-top: -0.44699999999999995em;
  }

  .font-sans-400.sm\\\\:text-1\\\\/2::after {
    margin-bottom: -0.395em;
  }

  .sm\\\\:measure-0 {
    max-width: 10ch;
  }

  .sm\\\\:measure-1 {
    max-width: 20ch;
  }

  .sm\\\\:rhythm-0 > * + * {
    margin-top: 0rem;
  }

  .sm\\\\:rhythm-y-0 > * + * {
    margin-top: 0rem;
  }

  .sm\\\\:rhythm-x-0 > * + * {
    margin-left: 0rem;
  }

  .sm\\\\:rhythm-1 > * + * {
    margin-top: 1rem;
  }

  .sm\\\\:rhythm-y-1 > * + * {
    margin-top: 1rem;
  }

  .sm\\\\:rhythm-x-1 > * + * {
    margin-left: 1rem;
  }

  .sm\\\\:rhythm-2 > * + * {
    margin-top: 2rem;
  }

  .sm\\\\:rhythm-y-2 > * + * {
    margin-top: 2rem;
  }

  .sm\\\\:rhythm-x-2 > * + * {
    margin-left: 2rem;
  }

  .sm\\\\:matrix-0 {
    display: grid;
    grid-template-columns: repeat(1, minmax(auto,1fr));
  }

  .sm\\\\:matrix-1 {
    display: grid;
    grid-template-columns: repeat(1, minmax(auto,1fr));
  }

  .sm\\\\:matrix-2 {
    display: grid;
    grid-template-columns: repeat(2, minmax(auto,1fr));
  }

  .sm\\\\:matrix-3 {
    display: grid;
    grid-template-columns: repeat(3, minmax(auto,1fr));
  }

  .sm\\\\:matrix-4 {
    display: grid;
    grid-template-columns: repeat(4, minmax(auto,1fr));
  }

  .sm\\\\:matrix-5 {
    display: grid;
    grid-template-columns: repeat(5, minmax(auto,1fr));
  }

  .sm\\\\:matrix-6 {
    display: grid;
    grid-template-columns: repeat(6, minmax(auto,1fr));
  }

  .sm\\\\:matrix-gap-0 {
    grid-row-gap: 0rem;
    grid-column-gap: 0rem;
  }

  .sm\\\\:matrix-gap-x-0 {
    grid-column-gap: 0rem;
  }

  .sm\\\\:matrix-gap-y-0 {
    grid-row-gap: 0rem;
  }

  .sm\\\\:matrix-gap-1 {
    grid-row-gap: 1rem;
    grid-column-gap: 1rem;
  }

  .sm\\\\:matrix-gap-x-1 {
    grid-column-gap: 1rem;
  }

  .sm\\\\:matrix-gap-y-1 {
    grid-row-gap: 1rem;
  }

  .sm\\\\:matrix-gap-2 {
    grid-row-gap: 2rem;
    grid-column-gap: 2rem;
  }

  .sm\\\\:matrix-gap-x-2 {
    grid-column-gap: 2rem;
  }

  .sm\\\\:matrix-gap-y-2 {
    grid-row-gap: 2rem;
  }

  .sm\\\\:cell-start-x-1 {
    grid-column-start: 1 !important;
  }

  .sm\\\\:cell-span-x-1 {
    grid-column: auto / span 1;
  }

  .sm\\\\:cell-start-x-1 {
    grid-column-start: 1 !important;
  }

  .sm\\\\:cell-span-x-1 {
    grid-column: auto / span 1;
  }

  .sm\\\\:cell-start-x-2 {
    grid-column-start: 2 !important;
  }

  .sm\\\\:cell-span-x-2 {
    grid-column: auto / span 2;
  }

  .sm\\\\:cell-start-x-3 {
    grid-column-start: 3 !important;
  }

  .sm\\\\:cell-span-x-3 {
    grid-column: auto / span 3;
  }

  .sm\\\\:cell-start-x-4 {
    grid-column-start: 4 !important;
  }

  .sm\\\\:cell-span-x-4 {
    grid-column: auto / span 4;
  }

  .sm\\\\:cell-start-x-5 {
    grid-column-start: 5 !important;
  }

  .sm\\\\:cell-span-x-5 {
    grid-column: auto / span 5;
  }

  .sm\\\\:cell-start-x-6 {
    grid-column-start: 6 !important;
  }

  .sm\\\\:cell-span-x-6 {
    grid-column: auto / span 6;
  }
}"
`;
